Add swagger ui for user
