# config/routes.js
@@ -1,12 +1,11 @@
 const express = require("express");
 const controllers = require("../app/controllers");
-const { registerRules } = require("../app/validators/rule");
-const checkToken = require("../app/middlewares/checkToken");
-const validate = require("../app/middlewares/validate");
+// const { registerRules } = require("../app/validators/rule");
+// const checkToken = require("../app/middlewares/checkToken");
+// const validate = require("../app/middlewares/validate");
 const YAML = require("yamljs");
 const swaggerUI = require("swagger-ui-express");
 const apiDocs = YAML.load("./api-doc.yaml");
-
 
 const apiRouter = express.Router();
 
@@ -14,6 +13,8 @@ const apiRouter = express.Router();
  * TODO: Implement your own API
  *       implementations
  */
+
+// open api endpoint using swagger ui
 apiRouter.use("/api-docs/v1", swaggerUI.serve, swaggerUI.setup(apiDocs));
 
 apiRouter.get("/api/v1/posts", controllers.api.v1.postController.list);
@@ -24,10 +25,18 @@ apiRouter.delete(
 	"/api/v1/posts/:id",
 	controllers.api.v1.postController.destroy
 );
+
+apiRouter.get(
+	"/api/v1/whoami",
+	controllers.api.v1.userController.checkToken,
+	controllers.api.v1.userController.whoAmI
+);
 apiRouter.post("/api/v1/login", controllers.api.v1.userController.login);
 apiRouter.post(
 	"/api/v1/register",
-	validate(registerRules),
+	controllers.api.v1.validatorController.validate(
+		controllers.api.v1.validatorController.registerRules
+	),
 	controllers.api.v1.userController.register
 );
 /**
